--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -6,7 +6,7 @@
         <source>Welcome to <x id="INTERPOLATION" equiv-text="{{title}}"/>!</source>
         <target>Bienvenue dans <x id="INTERPOLATION" equiv-text="{{title}}"/>!</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app\app.component.ts</context>
+          <context context-type="sourcefile">app/app.component.ts</context>
           <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
@@ -14,7 +14,7 @@
         <source>Title</source>
         <target>Titre</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app\app.component.ts</context>
+          <context context-type="sourcefile">app/app.component.ts</context>
           <context context-type="linenumber">4</context>
         </context-group>
       </trans-unit>
@@ -22,7 +22,7 @@
         <source>Angular logo</source>
         <target>Logo Angular</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app\app.component.ts</context>
+          <context context-type="sourcefile">app/app.component.ts</context>
           <context context-type="linenumber">5</context>
         </context-group>
       </trans-unit>
@@ -30,7 +30,7 @@
         <source>Here are some links to help you start: </source>
         <target>Voici quelques liens pour vous aider à démarrer: </target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app\app.component.ts</context>
+          <context context-type="sourcefile">app/app.component.ts</context>
           <context context-type="linenumber">7</context>
         </context-group>
       </trans-unit>
@@ -38,7 +38,7 @@
         <source>Plural ICU: <x id="ICU" equiv-text="{minutes, plural, =0 {...} =1 {...} other {...}}"/> (value: <x id="INTERPOLATION" equiv-text="{{minutes}}"/>)</source>
         <target>Plural ICU: <x id="ICU" equiv-text="{minutes, plural, =0 {...} =1 {...} other {...}}"/> (value: <x id="INTERPOLATION" equiv-text="{{minutes}}"/>)</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app\app.component.ts</context>
+          <context context-type="sourcefile">app/app.component.ts</context>
           <context context-type="linenumber">22</context>
         </context-group>
       </trans-unit>
@@ -46,7 +46,7 @@
         <source>{VAR_PLURAL, plural, =0 {just now} =1 {1 minute ago} other {<x id="INTERPOLATION" equiv-text="{{minutes}}"/> minutes ago} }</source>
         <target>{VAR_PLURAL, plural, =0 {à l'instant} =1 {il y a 1 minute} other {il y a <x id="INTERPOLATION" equiv-text="{{minutes}}"/> minutes} }</target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app\app.component.ts</context>
+          <context context-type="sourcefile">app/app.component.ts</context>
           <context context-type="linenumber">22</context>
         </context-group>
       </trans-unit>
@@ -54,7 +54,7 @@
         <source>Localized date: <x id="INTERPOLATION" equiv-text="{{date | date:&apos;full&apos;}}"/></source>
         <target>Date localisée: <x id="INTERPOLATION" equiv-text="{{date | date:&apos;full&apos;}}"/></target>
         <context-group purpose="location">
-          <context context-type="sourcefile">app\app.component.ts</context>
+          <context context-type="sourcefile">app/app.component.ts</context>
           <context context-type="linenumber">24</context>
         </context-group>
       </trans-unit>
